<resources>
    <string name="app_name">WspinoMierz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Główna</string>
    <string name="menu_list">Przejścia</string>
    <string name="menu_addRoute">Dodaj przejście</string>
    <string name="menu_statistics">Statystyki</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_timer">Stoper</string>
    <string name="menu_calc">Kalkulator skal</string>
<!--    <string name="google_maps_key">AIzaSyBrddjfNCaAGvVDsk6C8MQhvzYoBdc4414</string>-->
</resources>
