<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wspinomierz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.wspinomierz.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_addRoute"
        android:name="com.example.wspinomierz.ui.addRoute.addRouteFragment"
        android:label="@string/menu_addRoute"
        tools:layout="@layout/fragment_addroute" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.wspinomierz.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.wspinomierz.ui.map.DirsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_dirs" />

    <fragment
        android:id="@+id/nav_calc"
        android:name="com.example.wspinomierz.ui.calc.CalcFragment"
        android:label="@string/menu_calc"
        tools:layout="@layout/fragment_calc" />

    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.wspinomierz.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />
</navigation>